[workspace]
members = ["crates/balti-app"]
default-members = ["crates/balti-app"]
resolver = "2"

[workspace.dependencies]
balti-app = { path = "crates/balti-app" }

chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0.0"
reqwest = { version = "0.12", features = ["json", "stream", "multipart", "rustls-tls"] }
serde = "1"
serde_json = "1"

tokio = { version = "1", features = ["full"] }
futures = "0.3.31"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
