[workspace]
members = ["crates/balti"]
default-members = ["crates/balti"]
resolver = "2"

[workspace.dependencies]
balti = { path = "crates/balti" }

chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0.0"
reqwest = { version = "0.12", features = ["json", "stream", "multipart", "rustls-tls"] }
serde = "1"
serde_json = "1"

tokio = { version = "1", features = ["full"] }
futures = "0.3.31"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
