[package]
name = "balti-app"
version = "0.1.0"
edition = "2024"
authors = ["Shashank Verma <shank03>"]
license = "MIT"
publish = false

[[bin]]
name = "balti-app"
path = "src/main.rs"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5"
gpui-component-assets = "0.5"

chrono.workspace = true
futures.workspace = true

dirs.workspace = true
reqwest.workspace = true
tokio.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.62"
