[package]
name = "balti-app"
version = "0.1.0"
edition = "2024"
authors = ["Shashank Verma <shank03>"]
license = "MIT"
publish = false

[[bin]]
name = "balti-app"
path = "src/main.rs"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5"

rust-embed = { version = "8", features = ["interpolate-folder-path"] }
anyhow = "1"

reqwest.workspace = true
futures.workspace = true
tokio.workspace = true

dirs.workspace = true
chrono.workspace = true
toml = "0.9.8"
serde.workspace = true
serde_json.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

aws-sdk-s3 = { version = "1", features = [
    "rt-tokio",
    "behavior-version-latest",
] }
aws-config = { version = "1.8", features = ["behavior-version-latest"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.62"
